--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="left">
 
             <img src="xyz.png" alt="">
-            <div>Visak Gym</div>
+            <div>Virat Gym</div>
         </div>
 
         <div class="mid">
@@ -42,7 +42,7 @@
 
     <div class="container">
 
-        <h1>Join the best gym of visak fitness</h1>
+        <h1>Join the best gym of virat fitness</h1>
         <form action="noaction.php">
                 <div class="form-group">
                     <input type="text" name="" placeholder="Enter your Name">
